translate function done

--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Homepage</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+  <form>
+    <label>Text you want to translate</label>
+    <textarea rows="5" cols="50"></textarea>
+    <button type="button">translate</button>
+  </form>
   
+  <p>
+
+  </p>
+  <script src="/main.js"></script>
 </body>
 </html>
