notes partial done

--- a/index.html
+++ b/index.html
@@ -7,34 +7,45 @@
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-  <form id="originalForm">
-    <label>Enter the text</label>
-    <textarea id="textOriginalArea" rows="5" cols="100"></textarea>
+  <section class="card">
+    <h1>Enter the text</h1>
+    <div contenteditable="true" class="area" id="textOriginalArea">Enter the text</div>
     <div>
       <button type="button" id="clearOriginalBtn">clear</button>
       <button type="button" id="breakBtn">break sentence</button>
     </div>
-  </form>
+  </section>
 
-  <form id="listForm">
-    <label>Sentence List</label>
-    <textarea id="sentenceListArea" rows="5" cols="100"></textarea>
+  <section class="card">
+    <h1>Sentence List</h1>
+    <div contenteditable="true" class="area" id="sentenceListArea"></div>
     <div>
       <button type="button" id="clearListBtn">clear</button>
       <button type="button" id="translateBtn">translate</button>
     </div>
-  </form>
-
-  <section id="translationPara">
-    <h1>Translation</h1>
-    <p id="translationArea"></p>
   </section>
-  <div>
-    <button type="button" id="clearTranslationBtn">clear</button>
-  </div>
+
+  <section class="card">
+    <h1>Translation</h1>
+    <div contenteditable="true" class="area" id="translationArea"></div>
+    <div>
+      <button type="button" id="clearTranslationBtn">clear</button>
+      <button type="button" id="lookUpBtn">look up</button>
+    </div>
+  </section>
+
+  <section class="card">
+    <h1>Notes</h1>
+    <div contenteditable="true" class="area" id="notesArea"></div>
+    <div>
+      <button type="button" id="clearNotesBtn">clear</button>
+      <button type="button" id="copyBtn">copy</button>
+    </div>
+  </section>
   
   <script src="/js/main.js" type="module"></script>
   <script src="/js/translate.js" type="module"></script>
   <script src="/js/breakSentence.js" type="module"></script>
+  <script src="/js/wordToChinese.js" type="module"></script>
 </body>
 </html>
