--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
 
   <section class="card">
     <h1>Notes</h1>
-    <div contenteditable="true" class="area" id="notesArea"></div>
+    <div contenteditable="true" class="area" id="notesArea">
+      <p class="note" contenteditable="true">January<br>一月 (NOUN)<br>一月份 (NOUN)<br>1月份 (NOUN)<br>今年1月 (NOUN)</p>
+      <p class="note" contenteditable="true">January<br>一月 (NOUN)<br>一月份 (NOUN)<br>1月份 (NOUN)<br>今年1月 (NOUN)</p>
+      <p class="note" contenteditable="true">January<br>一月 (NOUN)<br>一月份 (NOUN)<br>1月份 (NOUN)<br>今年1月 (NOUN)</p>
+      <p class="note" contenteditable="true">January<br>一月 (NOUN)<br>一月份 (NOUN)<br>1月份 (NOUN)<br>今年1月 (NOUN)</p>
+      <p class="note" contenteditable="true">January<br>一月 (NOUN)<br>一月份 (NOUN)<br>1月份 (NOUN)<br>今年1月 (NOUN)</p>
+      <p class="note" contenteditable="true">January<br>一月 (NOUN)<br>一月份 (NOUN)<br>1月份 (NOUN)<br>今年1月 (NOUN)</p>
+      <p class="note" contenteditable="true">January<br>一月 (NOUN)<br>一月份 (NOUN)<br>1月份 (NOUN)<br>今年1月 (NOUN)</p>
+    </div>
     <div>
       <button type="button" id="clearNotesBtn">clear</button>
       <button type="button" id="copyBtn">copy</button>
