--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+  <header>
+    Learn a language through articles.  Paste a part of an article and then follow the steps to learn the language.
+  </header>
   <section class="card">
-    <h1>Enter the text</h1>
+    <h1>1. Enter the text 
+      <svg id="originalQ" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 256 256">
+        <path fill="currentColor" d="M140 180a12 12 0 1 1-12-12a12 12 0 0 1 12 12M128 72c-22.06 0-40 16.15-40 36v4a8 8 0 0 0 16 0v-4c0-11 10.77-20 24-20s24 9 24 20s-10.77 20-24 20a8 8 0 0 0-8 8v8a8 8 0 0 0 16 0v-.72c18.24-3.35 32-17.9 32-35.28c0-19.85-17.94-36-40-36m104 56A104 104 0 1 1 128 24a104.11 104.11 0 0 1 104 104m-16 0a88 88 0 1 0-88 88a88.1 88.1 0 0 0 88-88" />
+      </svg>
+    </h1>
+    <div id="originalHint">
+      Paste the text in the box.  Don't forget to clear the text before pasting anything.  Use "break sentence" button to break the sentences line by line.
+    </div>
     <div contenteditable="true" class="area" id="textOriginalArea">Enter the text</div>
     <div>
       <button type="button" id="clearOriginalBtn">clear</button>
@@ -17,7 +27,14 @@
   </section>
 
   <section class="card">
-    <h1>Sentence List</h1>
+    <h1>2. Sentence List 
+      <svg id="listQ" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 256 256">
+        <path fill="currentColor" d="M140 180a12 12 0 1 1-12-12a12 12 0 0 1 12 12M128 72c-22.06 0-40 16.15-40 36v4a8 8 0 0 0 16 0v-4c0-11 10.77-20 24-20s24 9 24 20s-10.77 20-24 20a8 8 0 0 0-8 8v8a8 8 0 0 0 16 0v-.72c18.24-3.35 32-17.9 32-35.28c0-19.85-17.94-36-40-36m104 56A104 104 0 1 1 128 24a104.11 104.11 0 0 1 104 104m-16 0a88 88 0 1 0-88 88a88.1 88.1 0 0 0 88-88" />
+      </svg>
+    </h1>
+    <div id="listHint">
+
+    </div>
     <div contenteditable="true" class="area" id="sentenceListArea"></div>
     <div>
       <button type="button" id="clearListBtn">clear</button>
@@ -26,7 +43,14 @@
   </section>
 
   <section class="card">
-    <h1>Translation</h1>
+    <h1>3. Translation 
+      <svg id="translationQ" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 256 256">
+        <path fill="currentColor" d="M140 180a12 12 0 1 1-12-12a12 12 0 0 1 12 12M128 72c-22.06 0-40 16.15-40 36v4a8 8 0 0 0 16 0v-4c0-11 10.77-20 24-20s24 9 24 20s-10.77 20-24 20a8 8 0 0 0-8 8v8a8 8 0 0 0 16 0v-.72c18.24-3.35 32-17.9 32-35.28c0-19.85-17.94-36-40-36m104 56A104 104 0 1 1 128 24a104.11 104.11 0 0 1 104 104m-16 0a88 88 0 1 0-88 88a88.1 88.1 0 0 0 88-88" />
+      </svg>
+    </h1>
+    <div id="translationHint">
+
+    </div>
     <div contenteditable="true" class="area" id="translationArea"></div>
     <div>
       <button type="button" id="clearTranslationBtn">clear</button>
@@ -35,7 +59,14 @@
   </section>
 
   <section class="card">
-    <h1>Notes</h1>
+    <h1>4. Notes 
+      <svg id="notesQ" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 256 256">
+        <path fill="currentColor" d="M140 180a12 12 0 1 1-12-12a12 12 0 0 1 12 12M128 72c-22.06 0-40 16.15-40 36v4a8 8 0 0 0 16 0v-4c0-11 10.77-20 24-20s24 9 24 20s-10.77 20-24 20a8 8 0 0 0-8 8v8a8 8 0 0 0 16 0v-.72c18.24-3.35 32-17.9 32-35.28c0-19.85-17.94-36-40-36m104 56A104 104 0 1 1 128 24a104.11 104.11 0 0 1 104 104m-16 0a88 88 0 1 0-88 88a88.1 88.1 0 0 0 88-88" />
+      </svg>
+    </h1>
+    <div id="notesHint">
+
+    </div>
     <div contenteditable="true" class="area" id="notesArea">
       <p class="note" contenteditable="true">January<br>一月 (NOUN)<br>一月份 (NOUN)<br>1月份 (NOUN)<br>今年1月 (NOUN)</p>
       <p class="note" contenteditable="true">January<br>一月 (NOUN)<br>一月份 (NOUN)<br>1月份 (NOUN)<br>今年1月 (NOUN)</p>
