--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   </section>
 
   <section class="card">
-    <h1>4. Notes 
+    <h1>4. 筆記 
       <svg id="notesQ" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 256 256">
         <path fill="currentColor" d="M140 180a12 12 0 1 1-12-12a12 12 0 0 1 12 12M128 72c-22.06 0-40 16.15-40 36v4a8 8 0 0 0 16 0v-4c0-11 10.77-20 24-20s24 9 24 20s-10.77 20-24 20a8 8 0 0 0-8 8v8a8 8 0 0 0 16 0v-.72c18.24-3.35 32-17.9 32-35.28c0-19.85-17.94-36-40-36m104 56A104 104 0 1 1 128 24a104.11 104.11 0 0 1 104 104m-16 0a88 88 0 1 0-88 88a88.1 88.1 0 0 0 88-88" />
       </svg>
@@ -93,8 +93,9 @@
       <ul>
         <li>可手動增減筆記內容</li>
         <li>句末shift + Enter：在單格筆記欄增加一行。</li>
-        <li>文末Enter：新增一格筆記欄</li>
-        <li>del鍵：刪除文字或筆記欄</li>
+        <li>文末Enter：新增一格筆記欄。</li>
+        <li>del鍵：刪除文字或筆記欄。</li>
+        <li>筆記生成：把翻譯區域和筆記區域儲存成PDF檔。</li>
       </ul>
     </div>
     <div contenteditable="true" class="area" id="notesArea">
@@ -105,7 +106,7 @@
     </div>
     <div>
       <button type="button" id="clearNotesBtn">clear</button>
-      <button type="button" id="saveBtn">save as PDF</button>
+      <button type="button" id="saveBtn">筆記生成</button>
     </div>
   </section>
   
