--- a/index.html
+++ b/index.html
@@ -67,6 +67,22 @@
       </ul>
     </div>
     <div contenteditable="true" class="area" id="translationArea">
+      <span class="original-text">➢原句。原句。原句。原句。原句。原句。原句。原句。原句。原句。原句。原句。原句。原句。原句。</span><br>
+      <span class="translated-text">➢翻譯。翻譯。翻譯。翻譯。翻譯。翻譯。翻譯。翻譯。翻譯。翻譯。翻譯。翻譯。翻譯。翻譯。翻譯。翻譯。翻譯。翻譯。翻譯。翻譯。翻譯。翻譯。<br></span>
+      <span class="original-text">➢原句。</span><br>
+      <span class="translated-text">➢翻譯。<br></span>
+      <span class="original-text">➢原句。</span><br>
+      <span class="translated-text">➢翻譯。<br></span>
+      <span class="original-text">➢原句。</span><br>
+      <span class="translated-text">➢翻譯。<br></span>
+      <span class="original-text">➢原句。</span><br>
+      <span class="translated-text">➢翻譯。<br></span>
+      <span class="original-text">➢原句。</span><br>
+      <span class="translated-text">➢翻譯。<br></span>
+      <span class="original-text">➢原句。</span><br>
+      <span class="translated-text">➢翻譯。<br></span>
+      <span class="original-text">➢原句。</span><br>
+      <span class="translated-text">➢翻譯。<br></span>
       <span class="original-text">➢原句。</span><br>
       <span class="translated-text">➢翻譯。<br></span>
       <span class="original-text">➢原句。</span><br>
@@ -99,7 +115,19 @@
       </ul>
     </div>
     <div contenteditable="true" class="area" id="notesArea">
-      <p class="note" contenteditable="true">word1<br>中文意思<br>(n.)English definition<br>(v.) English definition<br>Example sentence</p>
+      <p class="note" contenteditable="true">word1<br>中文意思<br>(n.)English definition<br>(v.) English definition English definition English definition<br>Example sentence Example sentence Example sentence Example sentence Example sentence</p>
+      <p class="note" contenteditable="true">word2<br>中文意思<br>(n.)English definition<br>(v.) English definition<br>Example sentence</p>
+      <p class="note" contenteditable="true">word3<br>中文意思<br>(n.)English definition<br>(v.) English definition<br>Example sentence</p>
+      <p class="note" contenteditable="true">word4<br>中文意思<br>(n.)English definition<br>(v.) English definition<br>Example sentence</p>
+      <p class="note" contenteditable="true">word1<br>中文意思<br>(n.)English definition<br>(v.) English definition English definition English definition<br>Example sentence Example sentence Example sentence Example sentence Example sentence</p>
+      <p class="note" contenteditable="true">word2<br>中文意思<br>(n.)English definition<br>(v.) English definition<br>Example sentence</p>
+      <p class="note" contenteditable="true">word3<br>中文意思<br>(n.)English definition<br>(v.) English definition<br>Example sentence</p>
+      <p class="note" contenteditable="true">word4<br>中文意思<br>(n.)English definition<br>(v.) English definition<br>Example sentence</p>
+      <p class="note" contenteditable="true">word1<br>中文意思<br>(n.)English definition<br>(v.) English definition English definition English definition<br>Example sentence Example sentence Example sentence Example sentence Example sentence</p>
+      <p class="note" contenteditable="true">word2<br>中文意思<br>(n.)English definition<br>(v.) English definition<br>Example sentence</p>
+      <p class="note" contenteditable="true">word3<br>中文意思<br>(n.)English definition<br>(v.) English definition<br>Example sentence</p>
+      <p class="note" contenteditable="true">word4<br>中文意思<br>(n.)English definition<br>(v.) English definition<br>Example sentence</p>
+      <p class="note" contenteditable="true">word1<br>中文意思<br>(n.)English definition<br>(v.) English definition English definition English definition<br>Example sentence Example sentence Example sentence Example sentence Example sentence</p>
       <p class="note" contenteditable="true">word2<br>中文意思<br>(n.)English definition<br>(v.) English definition<br>Example sentence</p>
       <p class="note" contenteditable="true">word3<br>中文意思<br>(n.)English definition<br>(v.) English definition<br>Example sentence</p>
       <p class="note" contenteditable="true">word4<br>中文意思<br>(n.)English definition<br>(v.) English definition<br>Example sentence</p>
