english definition 80% done

--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
       <input type="checkbox" id="chinese-meaning"><label for="chinese-meaning" class="lookup-checkbox" >中文</label>
       <input type="checkbox" id="english-meaning"><label for="english-meaning" class="lookup-checkbox" >English</label>
       <input type="checkbox" id="example-sentence"><label for="example-sentence" class="lookup-checkbox" >例句</label>
-      
     </div>
   </section>
 
@@ -110,7 +109,7 @@
   <script src="/js/main.js" type="module"></script>
   <script src="/js/translate.js" type="module"></script>
   <script src="/js/breakSentence.js" type="module"></script>
-  <script src="/js/wordToChinese.js" type="module"></script>
+  <script src="/js/lookUp.js" type="module"></script>
   <script src="/js/NotoSansTC-VariableFont_wght-normal.js" type="module"></script>
   <script src="/js/savePdf.js" type="module"></script>
 
