--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <header>
-    把英文文章分句翻譯，也可以查詢單詞意思，最後把翻譯和查詢的資料編輯後變成pdf檔儲存。<br>
-    請按照以下的步驟1→2→3→4完成你的筆記。
+    <h1>句句通</h1>
+    把英文文章分句翻譯，也可以查詢單詞意思，最後把翻譯和查詢的資料編輯後變成pdf檔儲存。<br>請按照以下的步驟1→2→3→4完成你的筆記。
   </header>
   <section class="card">
     <h1>1. 輸入文字 
@@ -17,13 +17,7 @@
         <path fill="currentColor" d="M140 180a12 12 0 1 1-12-12a12 12 0 0 1 12 12M128 72c-22.06 0-40 16.15-40 36v4a8 8 0 0 0 16 0v-4c0-11 10.77-20 24-20s24 9 24 20s-10.77 20-24 20a8 8 0 0 0-8 8v8a8 8 0 0 0 16 0v-.72c18.24-3.35 32-17.9 32-35.28c0-19.85-17.94-36-40-36m104 56A104 104 0 1 1 128 24a104.11 104.11 0 0 1 104 104m-16 0a88 88 0 1 0-88 88a88.1 88.1 0 0 0 88-88" />
       </svg>
     </h1>
-    <div id="originalHint" class="hintBox">
-      <ul>
-        <li>原文限英文。</li>
-        <li>單句長度不可超過10,000字母（含空格）</li>
-        <li>總長度不可超過100句，也不可超過50,000字母（含空格）</li>
-      </ul>
-    </div>
+    <div id="originalHint" class="hintBox"></div>
     <div contenteditable="true" class="area" id="textOriginalArea">請輸入英文原文</div>
     <div>
       <button type="button" id="clearOriginalBtn">清除原文</button>
@@ -37,12 +31,7 @@
         <path fill="currentColor" d="M140 180a12 12 0 1 1-12-12a12 12 0 0 1 12 12M128 72c-22.06 0-40 16.15-40 36v4a8 8 0 0 0 16 0v-4c0-11 10.77-20 24-20s24 9 24 20s-10.77 20-24 20a8 8 0 0 0-8 8v8a8 8 0 0 0 16 0v-.72c18.24-3.35 32-17.9 32-35.28c0-19.85-17.94-36-40-36m104 56A104 104 0 1 1 128 24a104.11 104.11 0 0 1 104 104m-16 0a88 88 0 1 0-88 88a88.1 88.1 0 0 0 88-88" />
       </svg>
     </h1>
-    <div id="listHint" class="hintBox">
-      <ul>
-        <li>一次最多翻譯25句，請把不需要翻譯的句子刪除。</li>
-        <li>總長度不可超過5,000字母（含空格）。</li>
-      </ul>
-    </div>
+    <div id="listHint" class="hintBox"></div>
     <div contenteditable="true" class="area" id="sentenceListArea">
       ➢範例句。<br>
       ➢範例句。<br>
@@ -60,12 +49,7 @@
         <path fill="currentColor" d="M140 180a12 12 0 1 1-12-12a12 12 0 0 1 12 12M128 72c-22.06 0-40 16.15-40 36v4a8 8 0 0 0 16 0v-4c0-11 10.77-20 24-20s24 9 24 20s-10.77 20-24 20a8 8 0 0 0-8 8v8a8 8 0 0 0 16 0v-.72c18.24-3.35 32-17.9 32-35.28c0-19.85-17.94-36-40-36m104 56A104 104 0 1 1 128 24a104.11 104.11 0 0 1 104 104m-16 0a88 88 0 1 0-88 88a88.1 88.1 0 0 0 88-88" />
       </svg>
     </h1>
-    <div id="translationHint" class="hintBox">
-      <ul>
-        <li>選取要查詢的單字或片語，按「查單詞」。</li>
-        <li>查詢的相關資料會出現在下方筆記欄。</li>
-      </ul>
-    </div>
+    <div id="translationHint" class="hintBox"></div>
     <div contenteditable="true" class="area" id="translationArea">
       <span class="original-text">➢原句。</span><br>
       <span class="translated-text">➢翻譯。<br></span>
@@ -89,15 +73,7 @@
         <path fill="currentColor" d="M140 180a12 12 0 1 1-12-12a12 12 0 0 1 12 12M128 72c-22.06 0-40 16.15-40 36v4a8 8 0 0 0 16 0v-4c0-11 10.77-20 24-20s24 9 24 20s-10.77 20-24 20a8 8 0 0 0-8 8v8a8 8 0 0 0 16 0v-.72c18.24-3.35 32-17.9 32-35.28c0-19.85-17.94-36-40-36m104 56A104 104 0 1 1 128 24a104.11 104.11 0 0 1 104 104m-16 0a88 88 0 1 0-88 88a88.1 88.1 0 0 0 88-88" />
       </svg>
     </h1>
-    <div id="notesHint" class="hintBox">
-      <ul>
-        <li>可手動增減筆記內容</li>
-        <li>句末shift + Enter：在單格筆記欄增加一行。</li>
-        <li>文末Enter：新增一格筆記欄。</li>
-        <li>del鍵：刪除文字或筆記欄。</li>
-        <li>筆記生成：把翻譯區域和筆記區域儲存成PDF檔。</li>
-      </ul>
-    </div>
+    <div id="notesHint" class="hintBox"></div>
     <div contenteditable="true" class="area" id="notesArea">
     </div>
     <div>
